# Trustworthy-RAG

./: .gitignore  CITATION.cff  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: dev_set.jsonl  docs_eval.jsonl  eval_set.jsonl  hotpot_sample.json  sample_corpus.jsonl
examples/: quickstart.py  run_benchmark.py  run_demo.py  run_eval.py  run_hotpot.py  run_matrix.py  run_real_models.py  run_trust.py  show_self_correction.py
examples/integrations/: langchain_example.py  llamaindex_example.py
notebooks/: benchmark.ipynb  trust_quickstart.ipynb
srag/: __init__.py  adapters.py  api.py  calibration.py  chunking.py  cli.py  controller.py  embeddings.py  entailment.py  finalizer.py  gate.py  generator.py  llm.py  pipeline.py  planner.py  reranker.py  retrieval.py  state.py  trace_view.py  verifier.py
srag/evaluation/: __init__.py  artifact.py  configs.py  curves.py  datasets.py  figures.py  harness.py  leakage.py  metrics.py  report.py  trust.py
tests/: test_adapters.py  test_api.py  test_artifact.py  test_calibration.py  test_cli.py  test_competent_generator.py  test_controller.py  test_curves.py  test_evaluation.py  test_failure_analysis.py  test_finalizer.py  test_gate.py  test_hotpot.py  test_integrations.py  test_leakage.py  test_llm.py  test_pipeline.py  test_planner.py  test_run_trust.py  test_trace_view.py  test_trust.py  test_verifier.py
tools/: failure_analysis.py  get_datasets.py  ingest_results.py  make_gallery.py
